    + detect use of $FUNCNAME, $TMOUT, and $TIMEFORMAT
    + detect uses of sleep with anything other than an int.
    + detect the use of the hash utility and $_
    + check for other forms of brace expansion
    + check for use of non-standard tilde expansion
    + check for case modification expansions
    + check for the use of $GLOBIGNORE

  [ Regid Ichira ]
  * wnpp-alert: Support using curl as alternative to wget. (Closes: #690056)
  * wnpp-check: Support using curl as alternative to wget. (Closes: #690059)

 -- James McCoy <jamessan@debian.org>  Sat, 15 Sep 2012 16:12:16 -0400

devscripts (2.12.6) unstable; urgency=low

  * Actual install German translation.

 -- Benjamin Drung <bdrung@debian.org>  Sun, 25 Nov 2012 00:30:00 +0100

devscripts (2.12.5) unstable; urgency=low

  [ James McCoy ]
  * bts:
    + Provide a clearer error message when Authen::SASL isn't installed.
      (Closes: #689816)
    + Don't require a usertag after 'bts usertag <bug> ='.  (Closes: #689815)
    + Don't require a package after 'bts affects <bug> ='.  (Closes: #690131)
  * Add German translation of man pages.  Thanks to Chris Leick.  (Closes:
    #687985)

  [ Benjamin Drung ]
  * Fix Subversion typo and write all instances of it with an capital initial
    letter. Thanks to Regid Ichira for the finding. (Closes: #689953)
  * debuild:
    - Fix failure if called with --preserve-env and GREP_OPTIONS is set.
      Thanks to Aaron Culich for the patch.  (Closes: #501056, LP: #581319)
    - Add missing bits to support dpkg-genchanges hook.
      Thanks to Maciej Malycha for the patch. (LP: #1065201)
  * wrap-and-sort: Sort Pre-Depends list (LP: #1070599)

  [ David Prévot ]
  * French translation update.

 -- Benjamin Drung <bdrung@debian.org>  Wed, 24 Oct 2012 22:15:34 +0200

devscripts (2.12.4) unstable; urgency=low

  [ James McCoy ]
  * dget: Avoid an infinite loop when a .changes/.dsc file references itself.
    (Closes: #687670)
  * debdiff: