@@ -83,6 +83,7 @@ devscripts (2.13.0) UNRELEASED; urgency=low
     + check for the use of $GLOBIGNORE
 
   [ Regid Ichira ]
+  * rc-alert: Support using curl as alternative to wget. (Closes: #690024)
   * wnpp-alert: Support using curl as alternative to wget. (Closes: #690056)
   * wnpp-check: Support using curl as alternative to wget. (Closes: #690059)
 
